--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "@types/nodemailer": "^7.0.1",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10"
   },
   "devDependencies": {
