--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "express-validator": "^7.2.1",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^7.0.5",
-    "nodemon": "^3.1.10"
+    "nodemailer": "^7.0.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
