--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
-    "build": "tsc",
+    "build": "tsc && xcopy src\\generated dist\\generated /E /I /Y",
     "build:copy": "tsc && xcopy src\\generated dist\\generated /E /I /Y",
-    "start": "node dist/index.js",
+    "start": "node dist/app.js",
     "start:build": "npm run build:copy && node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prisma:migrate": "prisma migrate dev --name init",
