--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,11 @@ JWT_SECRET_KEY =
 JWT_EXPIRES_IN = 
 DATABASE_URL=
 DIRECT_URL=
+
+
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_CLOUD_NAME=
+
+MAIL_USER=
+MAIL_PASSWORD=
